--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/6/dex.git"
+    "url": "git://github.com/6/Dex.git"
   },
   "keywords": [
     "css",
