--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     ,"sinon": "1.5.x"
     ,"sinon-chai": "2.2.x"
     ,"mocha": "1.7.x"
+    ,"jquery": "1.8.x"
   },
   "engines": {
     "node": ">=0.6"
