--- a/package.json
+++ b/package.json
@@ -22,10 +22,17 @@
     "underscore": "1.4.x"
     ,"request": "2.x"
     ,"jsdom": "0.2.x"
+    ,"express": "3.x"
+    ,"coffee-script": "1.4.x"
+    ,"jade": "0.27.x"
+    ,"less": "1.3.x"
+    ,"less-middleware": "0.1.x"
+    ,"connect-coffee-script": "0.0.4"
+    ,"connect": "2.6.x"
+    ,"underscore.string": "2.3.x"
   },
   "devDependencies": {
-    "coffee-script": "1.4.x"
-    ,"chai": "1.3.x"
+    "chai": "1.3.x"
     ,"sinon": "1.5.x"
     ,"sinon-chai": "2.2.x"
     ,"mocha": "1.7.x"
